crates/pgls_tokenizer/src/snapshots/pgls_tokenizer__tests__numeric_non_decimal.snap
---
source: crates/pgls_tokenizer/src/lib.rs
expression: "lex(r#\"\n0b100101\n0B10011001\n0o273\n0O755\n0x42f\n0XFFFF\n\"#)"
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "0b100101" @ Literal { kind: Int { base: Binary, empty_int: false } },
    "\n" @ LineEnding { count: 1 },
    "0B10011001" @ Literal { kind: Int { base: Binary, empty_int: false } },
    "\n" @ LineEnding { count: 1 },
    "0o273" @ Literal { kind: Int { base: Octal, empty_int: false } },
    "\n" @ LineEnding { count: 1 },
    "0O755" @ Literal { kind: Int { base: Octal, empty_int: false } },
    "\n" @ LineEnding { count: 1 },
    "0x42f" @ Literal { kind: Int { base: Hexadecimal, empty_int: false } },
    "\n" @ LineEnding { count: 1 },
    "0XFFFF" @ Literal { kind: Int { base: Hexadecimal, empty_int: false } },
    "\n" @ LineEnding { count: 1 },
]
