crates/pgls_tokenizer/src/snapshots/pgls_tokenizer__tests__quoted_ident_with_escape_quote.snap
---
source: crates/pgls_tokenizer/src/lib.rs
expression: "lex(r#\"\n\"foo \"\" bar\"\n\"#)"
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "\"foo \"\" bar\"" @ QuotedIdent { terminated: true },
    "\n" @ LineEnding { count: 1 },
]
